--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "ncrypt": "^1.0.7",
+    "nodemailer": "^6.9.6",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
