--- a/.env
+++ b/.env
@@ -7,5 +7,5 @@
 
  #  DATABASE_URL="mysql://root:Soulofgold01@localhost:3306/db_bebevindo"
 
- DATABASE_URL="mysql://root:bcd127Ka@localhost:3306/db_bebevindo"
+ DATABASE_URL="mysql://root:12345678@localhost:3306/db_bebevindo"
 
