--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
- #  DATABASE_URL="mysql://root:Soulofgold01@localhost:3306/db_bebevindo"
+ DATABASE_URL="mysql://root:Soulofgold01@localhost:3306/db_bebevindo"
 
- DATABASE_URL="mysql://root:12345678@localhost:3306/db_bebevindo"
+ #  DATABASE_URL="mysql://root:12345678@localhost:3306/db_bebevindo"
 
