--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "mongoose": "^7.6.3",
     "ncrypt": "^1.0.7",
     "nodemailer": "^6.9.6",
     "reflect-metadata": "^0.1.13",
