--- a/.env
+++ b/.env
@@ -7,7 +7,8 @@
 
    # DATABASE_URL="mysql://root:Soulofgold01@localhost:3306/db_bebevindo"
 
-  DATABASE_URL="mysql://root:12345678@localhost:3306/db_bebevindo"
+  #DATABASE_URL="mysql://root:12345678@localhost:3306/db_bebevindo"
    #    DATABASE_URL="mysql://root:bcd127Ka@localhost:3306/db_bebevindo"
 
 
+  DATABASE_URL="mysql://bebevindo:Soulofgold01@bebvindo.mysql.database.azure.com:3306/db_bebevindo"
