--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,5 @@
-DATABASE_URL="mysql://root:root@db-service:3310/db_bebevindo"
+# DATABASE_URL="mysql://root:root@db-service:3306/db_bebevindo"
 
  # DATABASE_URL="mysql://bebevindo:Soulofgold01@bebvindo.mysql.database.azure.com:3306/db_bebevindo"
+
+ DATABASE_URL="mysql://root:root@db:3306/db_bebevindo"
