--- a/.env.production
+++ b/.env.production
@@ -2,4 +2,4 @@
 
  # DATABASE_URL="mysql://bebevindo:Soulofgold01@bebvindo.mysql.database.azure.com:3306/db_bebevindo"
 
- DATABASE_URL="mysql://root:root@db:3306/db_bebevindo"
+ DATABASE_URL="mysql://root:root@localhost:3306/db_bebevindo"
