--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 # DATABASE_URL="mysql://root:root@db-service:3306/db_bebevindo"
 
- # DATABASE_URL="mysql://bebevindo:Soulofgold01@bebvindo.mysql.database.azure.com:3306/db_bebevindo"
+ DATABASE_URL="mysql://bebevindo:Soulofgold01@bebvindo.mysql.database.azure.com:3306/db_bebevindo"
 
- DATABASE_URL="mysql://root:root@localhost:3306/db_bebevindo"
+#  DATABASE_URL="mysql://root:root@localhost:3306/db_bebevindo"
